--- a/src/assets/iconfont.css
+++ b/src/assets/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 2828384 */
-  src: url('//at.alicdn.com/t/font_2828384_z59h5xquyis.woff2?t=1635777269373') format('woff2'),
-  url('//at.alicdn.com/t/font_2828384_z59h5xquyis.woff?t=1635777269373') format('woff'),
-  url('//at.alicdn.com/t/font_2828384_z59h5xquyis.ttf?t=1635777269373') format('truetype');
+  src: url('//at.alicdn.com/t/font_2828384_9ljtfm6v84u.woff2?t=1637379829475') format('woff2'),
+  url('//at.alicdn.com/t/font_2828384_9ljtfm6v84u.woff?t=1637379829475') format('woff'),
+  url('//at.alicdn.com/t/font_2828384_9ljtfm6v84u.ttf?t=1637379829475') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,110 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-iconset0416:before {
+  content: "\e727";
+}
+
+.icon-iconset0437:before {
+  content: "\e73c";
+}
+
+.icon-iconset0438:before {
+  content: "\e73d";
+}
+
+.icon-xiangpica:before {
+  content: "\e6ed";
+}
+
+.icon-xiangpi:before {
+  content: "\e618";
+}
+
+.icon-Excel:before {
+  content: "\e624";
+}
+
+.icon-Word:before {
+  content: "\e627";
+}
+
+.icon-huaban:before {
+  content: "\e630";
+}
+
+.icon-excel:before {
+  content: "\e617";
+}
+
+.icon-word:before {
+  content: "\e716";
+}
+
+.icon-ziti:before {
+  content: "\e60e";
+}
+
+.icon-weixuanzhongyuanquan:before {
+  content: "\e60f";
+}
+
+.icon-yuanxingweixuanzhong:before {
+  content: "\e72f";
+}
+
+.icon-icon-pencil:before {
+  content: "\e670";
+}
+
+.icon-rect-qipao:before {
+  content: "\e629";
+}
+
+.icon--xiaoxuxian:before {
+  content: "\e642";
+}
+
+.icon-xingzhuang-juxing:before {
+  content: "\eb97";
+}
+
+.icon-xingzhuang-tuoyuanxing:before {
+  content: "\eb99";
+}
+
+.icon-xingzhuang-sanjiaoxing:before {
+  content: "\eb9a";
+}
+
+.icon-zitiyanse:before {
+  content: "\ec85";
+}
+
+.icon-bi:before {
+  content: "\e61d";
+}
+
+.icon-ziti1:before {
+  content: "\e6db";
+}
+
+.icon-juxing:before {
+  content: "\e614";
+}
+
+.icon-juxing1:before {
+  content: "\e616";
+}
+
+.icon-guide_btn_bg:before {
+  content: "\e631";
+}
+
+.icon-tuoyuan:before {
+  content: "\eddc";
 }
 
 .icon-weibiaoti46:before {
